Better clock alignment. Corrected calculations of pointer to include minutes. styled add button

--- a/styles/timer.css
+++ b/styles/timer.css
@@ -17,11 +17,62 @@ h1 {
   color: #3583B6;
 }
 
+.clock-plus {
+  position: fixed;
+  margin-top: 270px;
+  margin-left: 25px;
+
+  border: none;
+  outline: none;
+  font-size: 50px;
+  font-weight: 700;
+  color: #3583B6;
+  background-color: transparent;
+  padding: 10px 10px;
+
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  overflow: hidden;
+}
+
+.clock-plus:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-color: #2098D1;
+  border-style: solid;
+  border-width: 0;
+  -webkit-transition-property: border-width;
+  transition-property: border-width;
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.clock-plus:hover:before {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  border-width: 4px;
+}
+
+
 .clocks {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-top: -50px;
+}
+
+.clock-div {
+  margin: 65px 0px 65px;
 }
 
 .clock {
@@ -46,15 +97,15 @@ h1 {
 
 .clock span {
   font-size: 100px;
-  margin-right: -30px;
-  margin-left: -30px;
+  margin-right: -20px;
+  margin-left: -20px;
   color: #3583B6;
 }
 
 .clockButtons {
   display: flex;
   margin-top: 30px;
-  margin-left: 285px;
+  margin-left: 280px;
 }
 
 .start-pause-button {
@@ -105,7 +156,7 @@ h1 {
   color: #3583B6;
   background-color: transparent;
   padding: 10px 10px;
-  margin-left: 255px;
+  margin-left: 245px;
   margin-top: 150px; 
 
   display: inline-block;
